misc4.0/etl/etl4/components/kiali/network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: istio-kiali-ingress
spec:
  podSelector:
    matchLabels:
      app: kiali
  ingress:
    - {}
  policyTypes:
    - Ingress
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: kiali-console-plugin-ingress
spec:
  podSelector:
    matchLabels:
      app: ossmconsole
  ingress:
    - {}
  policyTypes:
    - Ingress
